# D-Cashier-

./: .gitignore  README.md
OBB/: face_encoding.npy  package.xml  setup.cfg  setup.py
OBB/OBB/: adult_check_face copy.py  adult_check_face.py  adult_check_face_1st.py  adult_check_face_copy.py  cancel_detection.py  cap_detection.py  cap_detection_class.py  cap_detection_test.py  coordi_extract.py  detection copy 2.py  detection copy.py  detection.py  detection_1st.py  detection_drop.py  detection_real.py  detection_원본.py  polygon_processor.py  save_data.py  test.py  test_yolo.py  yolo.py  yolo_1st.py  yolo_copy.py
OBB/resource/: T_gripper2camera.npy
Tutorial/Calibration_Tutorial/: data_recording.py  eye2hand_calibration.py  handeye_calibration.py  test.py
Tutorial/Calibration_Tutorial/data/: calibrate_data.json
Tutorial/DRL_Tutorial/: rokey_study.ipynb
Tutorial/OD_Tutorial/YOLO/: custom_config.yaml  data_download.ipynb  train_tool.py  yolo_eval.py  yolo_train.py
Tutorial/OD_Tutorial/YOLO_SIMPLE/: eval.py  train.py
Tutorial/ROS_Tutorial/Service/: add_two_ints_client.py  add_two_ints_server.py
Tutorial/VoiceProcessing/: STT.py  class_embeddings.json  keyword_extraction.py  mic_test.py  wakeup_word.py
gui/: package.xml  setup.py
gui/gui/: real_gui.py
gui/resource/: product_data.json
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh  spawn_shell.bash
log/: latest_build
main_bringup/: package.xml  setup.cfg  setup.py
main_bringup/launch/: servers.launch.py
msgs/: CMakeLists.txt  package.xml
msgs/action/: ObjRotation.action  PickAndPlace.action
msgs/srv/: AdultEvent.srv  CancelObject.srv  CheckAdultObj.srv  ObjectInformation.srv
robot_api_control/: package.xml  setup.cfg  setup.py
robot_api_control/robot_api_control/: constants.py  control_action_server.py  main_client copy.py  main_client.py  main_controller.py  move_home.py  onrobot.py  robot_utils.py  test.py  transformation.py  util_control.py
src/gui/: package.xml  setup.py
src/gui/gui/: cost.py  (+5 more)
voice_processing/: package.xml  setup.py
voice_processing/voice_processing/: STT.py  __init__.py  get_keyword.py  keyword_publisher.py  test_wakeup.py  wakeup_word.py
(+127 files in other folders)
